--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -3,3 +3,7 @@ FROM python:3.9.21-alpine
 RUN apk update && apk add \
     bash \
     vim
+
+RUN ln -s /usr/local/bin/python /usr/local/bin/py
+
+WORKDIR /home/app
